<resources>
    <string name="app_add">添加</string>
    <string name="app_edit">编辑</string>
    <string name="app_delete">删除</string>
    <string name="app_default">默认</string>
    <string name="service">客服</string>
    <string name="me_login">登 录</string>
    <string name="me_real_name_hint">真实姓名</string>
    <string name="me_birthday">出生日期</string>
    <string name="me_male">男</string>
    <string name="me_female">女</string>
    <string name="me_secret">保密</string>
    <string name="me_save">保 存</string>
    <string name="me_version_check">版本更新</string>
    <string name="me_cache_clear">清空缓存</string>
    <string name="me_exit">退出登录</string>
    <string name="me_has_new_version">有新版本</string>
    <string name="me_is_new_version">已是最新版本</string>
    <string name="me_local_upload">本地上传</string>
    <string name="me_take_picture_upload">拍照上传</string>
    <string name="me_version">Version</string>
    <string name="me_upload_photo">上传图片</string>
    <string name="me_weibo">官方微博</string>
    <string name="me_advice_hint">请输入反馈意见</string>
    <string name="me_advice_flow">流量问题</string>
    <string name="me_advice_interface">界面建议</string>
    <string name="me_advice_function">功能建议</string>
    <string name="me_advice_operate">操作建议</string>
    <string name="me_advice_new_need">新需求</string>
    <string name="me_advice_other">其他问题</string>
    <string name="me_advice_submit">提交</string>
    <string name="me_advice_no_label">请选择意见类型</string>
    <string name="me_advice_success">感谢您的反馈意见！</string>
    <string name="me_advice_submitting">您的意见正在提交</string>
    <string name="me_phone">电话：</string>
    <string name="me_consignee_hint">收货人姓名</string>
    <string name="me_mobile_hint">手机号码</string>
    <string name="me_area">所在区域</string>
    <string name="me_detail_address_hint">详细地址</string>
    <string name="me_delete_address">您确定要删除吗？</string>
    <string name="me_uncomment">待评论</string>
    <string name="me_commented">已评论</string>
    <string name="me_see_comment">查看评论</string>
    <string name="me_emit_comment">发表评论</string>
    <string name="me_submitting">正在提交,请稍等</string>
    <string name="me_consignee_null">请输入收货人姓名</string>
    <string name="me_area_hint">请填写所在区域</string>
    <string name="me_detail_address_null">请输入2~30个字，不能输入非法字符</string>
    <string name="me_detail_address_error">请输入2~30个字，可由中英文，数字和下划线组成</string>
    <string name="me_deleting">正在删除，请稍等</string>
    <string name="me_order_id">订单号：</string>
    <string name="me_express_type">配送方式</string>
    <string name="me_service_fee">上牌服务费</string>
    <string name="pre_purchase_tax">购置税</string>
    <string name="pre_car_tax">车船税</string>
    <string name="traffic_insurance">交强险</string>
    <string name="me_has_pay">已支付：</string>
    <string name="me_to_pay">去付款</string>
    <string name="me_online_all_pay">在线全款</string>
    <string name="me_go_home_pay">上门收款</string>
    <string name="me_cancel_order_confirm">订单取消后将无法恢复，您确定取消吗？</string>
    <string name="me_cancel_reason">取消理由：</string>
    <string name="me_off">关闭</string>
    <string name="me_max_addresses_hint">最多保存8个地址</string>
    <string name="me_cancel_reason_hint">请选择取消订单的理由</string>
    <string name="me_info">完善信息</string>
    <string name="search_hint">搜索</string>
    <string name="clear_search_history">清空历史</string>
    <string name="classify">分类</string>
    <string name="buy_verify_pay_type_label">付款方式：</string>
    <string name="buy_verify_insurance">办理保险</string>
    <string name="buy_verify_insurance_label">办理保险：</string>
    <string name="pay_type_installment">预付订金</string>
    <string name="pay_type_off_line">分期付款</string>
    <string name="license_service_label">恒信套餐：</string>
    <string name="active_event">活动</string>
    <string name="special_offer_price">自营</string>
    <string name="special_offer_cut">直降</string>
    <string name="special_offer_deposit">订金</string>
    <string name="special_offer_stock">库存</string>
    <string name="promotion_queue_wait_time_string">您已经排队 %1$s 秒</string>
    <string name="buy_it_prepare">即将开始</string>
    <string name="buy_it_now">立即购买</string>
    <string name="buy_it_now_promotion">立即抢购</string>
    <string name="temporarily_out_of_stock">到货通知</string>
    <string name="promotion_sell_out">已抢光</string>
    <string name="dialog_arrival_message">一旦商品到货，您将收到邮件、短信推送通知</string>
    <string name="dialog_arrival_cellphone">手机号码</string>
    <string name="dialog_arrival_email">邮箱地址</string>
    <string name="dialog_price_cut_message">一旦商品在30日内降价，您将收到邮件、短信推送通知</string>
    <string name="dialog_price_cut_price_1">价格低于</string>
    <string name="dialog_price_cut_price_2">万元时通知我</string>
    <string name="dialog_price_cut_cellphone">手机号码</string>
    <string name="dialog_price_cut_email">邮箱地址</string>
    <string name="label_tv_cancel">取消原因</string>
    <string name="hint_memo_cancel">请输入取消原因</string>
    <string name="notice_cancel_text">温馨提示：订单取消后将无法恢复，请输入取消原因后点击提交</string>
    <string name="btn_cancel_commit">提交</string>
    <string name="text_cancel_search">取消</string>
    <string name="autodetail_is_promotion">该商品正在参加特卖活动</string>
    <string name="auto_common_to_promotion">速速抢购</string>
    <string name="title_activity_package_choose">选择用品</string>
    <string name="loan_head_tips_notify">
        温馨提示：请选择适合您的分期产品及银行机构，
        在商城支付订金并完善信息后再上传您的个人资料。
        完成订单后，您的专属客户经理会与您联系后续事宜。
    </string>
    <string name="title_activity_loan_bank_choose">金融机构</string>
    <string name="clear_choose">清空选择</string>
    <string name="current_price">优惠价：%1$s</string>
    <string name="original_price">原价：%1$s</string>
    <string name="goods_price">单价：</string>
    <string name="goods_total_cost">小计：</string>
    <string name="auto_package_number">确定</string>
    <string name="title_activity_insurance_counter">保险试算</string>
    <string name="title_activity_CommentActivity">商品评价</string>
    <string name="title_activity_send_comment">发表评论</string>
    <string name="title_activity_send_append">追加评论</string>
    <string name="title_activity_image_info">图片详情</string>
    <string name="title_activity_my_comment_detail">评论详情</string>
    <string name="fragment_description_image_info">评论和图集的图片预览</string>
    <string name="action_settings">Settings</string>
    <string name="home_order_tips_view_text">您尚未登录，请登录账号后查看您的订单</string>
    <string name="newsitem_service">恒信客服</string>
    <string name="newsitem_promotion">活动消息</string>
    <string name="title_activity_message_list">订单消息</string>
    <string name="title_activity_my_message">我的消息</string>
    <string name="recharge_number">充值账号</string>
    <string name="charge_number">充值金额</string>
    <string name="charge_record">历史充值记录：</string>
    <string name="empty_charge_phone">充值号码为空！</string>
    <string name="empty_charge_number">请输入充值的金额！</string>
    <string name="my_wallet_useful_balance">    可用现金余额：</string>
    <string name="my_wallet_use_balance">花余额</string>
    <string name="to_see_detail">查看明细</string>
    <string name="my_wallet_useful_integral">可用积分：</string>
    <string name="integral_rule">积分规则</string>
    <string name="wallet_use_integral">花积分</string>
    <string name="wallet_useful_coupon">可用优惠券：</string>
    <string name="wallet_cent">分</string>
    <string name="wallet_pice">张</string>
    <string name="to_see_coupon_detail">查看优惠券</string>
    <string name="month">月</string>
    <string name="this_month_cost">本月消费</string>
    <string name="get">获得</string>
    <string name="score">积分</string>
    <string name="usable_score">可用积分</string>
    <string name="usable_balance">可用现金余额</string>
    <string name="bill_total_get">累计得到：</string>
    <string name="bill_total_cost">累计消费：</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="login_or_register">登录/注册</string>
    <string name="shopping_cart">购物车</string>
    <string name="repair_appointment">修车预约</string>
    <string name="emergency_rescue">紧急救援</string>
    <string name="car_info">车辆信息</string>
    <string name="menber_rule">会员规则</string>
    <string name="brand_activity">品牌活动</string>
    <string name="my_comment">我的评价</string>
    <string name="my_service">在线客服</string>
    <string name="choose_payment">选择支付方式</string>
    <string name="total">合计：</string>
    <string name="coupon_detail">优惠券详情</string>
    <string name="coupon_description">优惠说明</string>
    <string name="end_date">有效日期</string>
    <string name="use_shop">使用门店</string>
    <string name="user_tip">使用须知</string>
    <string name="title_activity_real_name_authentication">设置支付密码</string>
    <string name="text_real_name_label">姓名:</string>
    <string name="text_real_name_hint">请输入真实姓名</string>
    <string name="text_real_id_label">身份证:</string>
    <string name="text_real_id_hint">请输入身份证号码</string>
    <string name="text_real_code_label">验证码:</string>
    <string name="text_real_code_hint">请输入验证码</string>
    <string name="text_real_pwd_label">支付密码:</string>
    <string name="text_real_pwd_notify">设置支付密码(由6位数字组成)</string>
    <string name="text_real_pwd_confirm_label">确认密码:</string>
    <string name="text_real_pwd_confirm_notify">确认密码与支付密码不一致</string>
    <string name="text_real_bottom_notify">提示：为保障账户安全请输入真实的身份信息</string>
    <string name="title_activity_quality_guarantee_ativity">查询整车质保</string>
    <string name="title_activity_me_change_pay_password">修改支付密码</string>
    <string name="title_activity_me_forget_pay_password">忘记支付密码</string>
    <string name="pay_pwd_name">真实姓名:</string>
    <string name="pay_pwd_name_hint">请输入真实姓名</string>
    <string name="pay_pwd_id">身份证:</string>
    <string name="pay_pwd_id_hint">请输入身份证号码</string>
    <string name="pay_pwd_code">验证码:</string>
    <string name="pay_pwd_code_hint">请输入验证码</string>
    <string name="pay_pwd_next_step_btn">下一步</string>
    <string name="pay_pwd_new_pwd">支付密码:</string>
    <string name="pay_pwd_new_confirm_pwd">确认密码:</string>
    <string name="pay_pwd_reset_pwd_finish">完成</string>
    <string name="pay_pwd_origin_pwd">原支付密码:</string>
    <string name="title_activity_order_refund">申请退款</string>
    <string name="title_activity_order_cancel">取消订单</string>
    <string name="empty_balance">抱歉，您暂无消费记录</string>
    <string name="empty_score">抱歉，您暂无积分明细</string>
    <string name="title_activity_illegal_query">违章查询</string>
    <string name="title_activity_illegal_confiscate">违章查缴</string>
    <string name="title_activity_illegal_query_result">违章查询结果</string>
    <string name="title_activity_illegal_detail">违章详情</string>
    <string name="title_activity_illegal_process">违章处理</string>
    <string name="title_activity_illegal_process_success">提交成功</string>
    <string name="title_activity_my_illegal_order">我的订单</string>
    <string name="title_activity_order_detail">订单详情</string>
    <string name="title_activity_illegal_picture">违章照片</string>
    <string name="title_activity_payment_methods">支付方式</string>
    <string name="title_activity_payment_success">支付成功</string>
    <string name="title_activity_cancel_order">取消订单</string>
    <string name="activity_vehicle_inspection">车辆年审</string>
    <string name="activity_drivers_license_change">驾驶证换证</string>
    <string name="title_activity_seckill_order_detail">订单详情</string>
    <string name="title_activity_carwash_order_detail">订单详情</string>
    <string name="title_activity_accessory_order_detail">订单详情</string>
    <string name="title_activity_invoice_info">发票信息</string>
    <string name="title_activity_maintain4_sshop_order_details">订单详情</string>
    <string name="illegal_explain">用户可通过“违章查缴”入口在线查询、缴纳违章罚款，在无时间、无精力等情况下，在线即可一键处理。违章代缴代办由合作的第三方提供下服务，业务缴款按每条收取一定的服务费。</string>
    <string name="sample_photo">查看范例</string>
    <string name="comsumer_detail">消费记录</string>
    <string name="my_used_auto">我的二手车</string>
    <string name="input_your_advice">请输入您的宝贵意见</string>
    <string name="input_your_phone_number">留下您的手机号码，方便我们联系您</string>
    <string name="choose_feedback_type">选择您需要投诉的类型</string>
    <string name="title_activity_recharge">充值</string>
    <string name="query_score">积分查询</string>
</resources>