<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_integral"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingEnd="7dp"
    android:paddingLeft="10dp"
    android:paddingRight="7dp"
    android:paddingStart="10dp"
    android:paddingTop="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView"
            style="@style/WhiteText14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:text="@string/my_wallet_useful_integral"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/integral_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

        <TextView
            style="@style/WhiteText14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/integral_number"
            android:layout_alignBottom="@+id/integral_number"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/integral_number"
            android:layout_toRightOf="@+id/integral_number"
            android:text="@string/wallet_cent"
            android:textStyle="bold" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_1"
            style="@style/WhiteText14"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/integral_rule"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/button_2"
            style="@style/WhiteText14"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wallet_use_integral"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/button_3"
            style="@style/WhiteText14"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/to_see_detail"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>